# AIProjectBrain

./: .env.example  .gitattributes  .gitignore  JOURNEY.md  LICENSE  README.md  Software_Atlas_Design_Language_v2.md  Software_Atlas_Specification_for_Claude.md  docker-compose.yml
.claude/: settings.json
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 28c47a138849_initial_schema_users_repositories_files_.py  2aac0fa0f3fb_add_graph_nodes_and_edges.py  37d3716b6d41_add_overviews_table.py  5b24cea53917_encrypt_user_access_token_at_rest.py  8b039903f255_add_documents_table.py  a1c4f7b2d903_add_chat_messages_table.py  e8e8999e405e_add_decisions_table.py  ed7d8cd70a0a_add_lessons_table.py
backend/app/: __init__.py  main.py
backend/app/application/: __init__.py  auth_service.py  chat_service.py  course_service.py  docs_service.py  embedding_service.py  explorer_service.py  flow_service.py  graph_builder.py  graph_service.py  indexing_service.py  overview_service.py  repository_service.py  thinking_service.py
backend/app/core/: config.py  crypto.py  logging.py  security.py
backend/app/domain/: __init__.py  entities.py  enums.py
backend/tests/: conftest.py  test_auth.py  test_celery_app.py  test_chat_history.py  test_chat_service.py  test_crypto.py  test_docs.py  test_embedding_service.py  test_explorer.py  test_flows.py  test_graph_api.py  test_graph_builder.py  test_health.py  test_indexing.py  test_learn.py  test_overview.py  test_parser.py  test_repositories.py  test_thinking.py
(+92 files in other folders)
